dataset1235/2025-2/2868285114/users/2053306537/executions/3071719669_680711497.log
== RUN (2025-08-28 22:51:10)
-- CODE: 
from math import tan, pi

lado = float(input())

apotema = lado / (2* tan(pi / 12)

                  area = 6 * lado * apotema

                       print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:50:47)
-- CODE: 
from math import *

lado = float(input())

apotema = lado / (2* tan(pi / 12)

                  area = 6 * lado * apotema

                       print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:51:11)
-- CODE: 
from math import tan, pi

lado = float(input())

apotema = lado / (2* tan(pi / 12)

                  area = 6 * lado * apotema

                       print(f"{area:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
548.61
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
3
---- correct output:
100.77
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
4
---- correct output:
179.14
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
279.9
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
6
---- correct output:
403.06
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2
---- correct output:
44.78
-- ERROR:
File "XXXX", line 5
    apotema = lado / (2* tan(pi / 12)
                     ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
